--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="author" content="Elinaldo Jr" />
         <title>Elinaldo Jr - Site pessoal</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -25,7 +25,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -37,22 +37,28 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
-            <section class="resume-section" id="about">
+            <section class="resume-section" id="sobre">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Elinaldo
                         <span class="text-primary">Jr</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Brasil · Itabuna-BA · (73) 99194-9371 ·
+                        <a href="mailto:esgjunior@uesc.br">esgjunior@uesc.br</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-2">Sou professor substituto da área de Ciência da Computação vinculada ao Departamento de Ciências Exatas e Tecnológicas da Universidade Estadual de Santa Cruz (UESC).</p>
+
+                    <p class="lead mb-2">Possuo graduação em bacharelado em Ciência da Computação (2011) e mestrado em Modelagem Computacional em Ciência e Tecnologia (2015), ambos pela UESC.</p>
+                        
+                    <p class="lead mb-5">Tenho interesse em linguagens de programação, banco de dados, desenvolvimento de sistemas, análise de dimensão fractal, processamento de imagens e desenvolvimento de jogos.</p>
+                    
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" class="social-icon" href="https://www.linkedin.com/in/elinaldo-junior-1a233020/"><i class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" class="social-icon" href="https://github.com/elinaldojr"><i class="fab fa-github"></i></a>
+                        <a target="_blank" class="social-icon" href="https://www.youtube.com/channel/UC2s6818S-nqLTGHu0dAi4Jw?view_as=subscriber"><i class="fab fa-youtube"></i></a>
+                        <a target="_blank" class="social-icon" href="https://www.instagram.com/elinaldogoesjr/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" class="social-icon" href="https://www.facebook.com/elinaldogoesjr/"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
