Mundanças no texto

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experiencia">Experiência</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#educacao">Educação</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Prêmios</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,7 +44,7 @@
                         <span class="text-primary">Jr</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Brasil · Itabuna-BA · (73) 99194-9371 ·
+                        Brasil · Itabuna-BA ·
                         <a href="mailto:esgjunior@uesc.br">esgjunior@uesc.br</a>
                     </div>
                     <p class="lead mb-2">Sou professor substituto da área de Ciência da Computação vinculada ao Departamento de Ciências Exatas e Tecnológicas da Universidade Estadual de Santa Cruz (UESC).</p>
@@ -55,6 +55,7 @@
                     
                     <div class="social-icons">
                         <a target="_blank" class="social-icon" href="https://www.linkedin.com/in/elinaldo-junior-1a233020/"><i class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" class="social-icon" href="lattes"><i class="fab fa-lattes"></i></a>
                         <a target="_blank" class="social-icon" href="https://github.com/elinaldojr"><i class="fab fa-github"></i></a>
                         <a target="_blank" class="social-icon" href="https://www.youtube.com/channel/UC2s6818S-nqLTGHu0dAi4Jw?view_as=subscriber"><i class="fab fa-youtube"></i></a>
                         <a target="_blank" class="social-icon" href="https://www.instagram.com/elinaldogoesjr/"><i class="fab fa-instagram"></i></a>
@@ -64,37 +65,37 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
-            <section class="resume-section" id="experience">
+            <section class="resume-section" id="experiencia">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Experiência</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Desenvolvedor Web (front-end)</h3>
+                            <div class="subheading mb-3">HomeTech/Pixxo</div>
+                            <p>Trabalhando com desenvolvimento e manutenção dos sistemas Web, contribuí para elaboração de novas interfaces e funcionalidades, sempre focando na melhor experiência para o usuário.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fevereiro de 2011 - Agosto de 2011</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Desenvolvedor Web e Desktop (front-end e back-end)</h3>
+                            <div class="subheading mb-3">UESC-UDO</div>
+                            <p>A elaboração de ferramentas de software para controle desde criação de e-mails, até controle de viagens e sistemas de helpdesk.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Agosto de 2011 - Março de 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <h3 class="mb-0">Professor</h3>
+                            <div class="subheading mb-3">Unime (Redes de Computadores)</div>
                             <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <h3 class="mb-0">Professor</h3>
+                            <div class="subheading mb-3">UESC (Ciência da Computação, Departamento de Ciências Exatas e Tecnológicas)</div>
                             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
@@ -103,22 +104,22 @@
             </section>
             <hr class="m-0" />
             <!-- Education-->
-            <section class="resume-section" id="education">
+            <section class="resume-section" id="educacao">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Educação</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
+                            <h3 class="mb-0">Universidade Estadual de Santa Cruz</h3>
+                            <div class="subheading mb-3">Bacharel em Ciência da Computação</div>
+                            <div>Ano de conclusão - 2011.1</div>
                             <p>GPA: 3.23</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
+                            <h3 class="mb-0">Universidade Estadual de Santa Cruz</h3>
+                            <div class="subheading mb-3">Mestrado em Modelagem Matemática em Ciência e Tecnologia</div>
                             <p>GPA: 3.56</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
@@ -130,20 +131,14 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Linguagens de Programação & Ferramentas</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-php"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-mysql"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
